<resources>
    <string name="app_name">NeRecipe20</string>
    <string name="Hello">NMedia!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="remove">Remove</string>
    <string name="description">description</string>
    <string name="post_text">Post text</string>
    <string name="menu_edit">Edit</string>
    <string name="home_message">Home</string>
    <string name="netology">Netology</string>
    <string name="chooser_share_post">Share post</string>
    <string name="chip_category_european">European</string>
    <string name="chip_category_asian">Asian</string>
    <string name="chip_category_eastern">Eastern</string>
    <string name="chip_category_american">American</string>
    <string name="chip_category_russian">Russian</string>
    <string name="chip_category_mediterranean">Mediterranean</string>
    <string name="chip_category_panasian">Pan-Asian</string>
    <string name="recipe_name">Recipe name:</string>
    <string name="recipe_author">Author:</string>
    <string name="recipe_category">Category:</string>
    <string name="recipe_photo">Photo link:</string>
    <string name="recipe_text">Recipe:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="filters">Filters</string>
    <string name="text_background" translatable="false">text_background</string>
    <string name="search_here" translatable="false">Search here</string>
    <string name="text_no_results">NO RESULTS</string>




</resources>