<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity.NewRecipeFragment">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/recipeNameStroke"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            app:autoSizeTextType="uniform"
            android:text="@string/recipe_name"
             />

        <EditText
            android:id="@+id/editTextRecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:inputType="text"
            android:textSize="14sp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/authorNameStroke"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            app:autoSizeTextType="uniform"
            android:text="@string/recipe_author" />

        <EditText
            android:id="@+id/editTextAuthorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:inputType="textPersonName"
            android:textSize="14sp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/categoryStroke"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            app:autoSizeTextType="uniform"
            android:text="@string/recipe_category" />


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupCategory"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="16dp"
            app:singleSelection="true"
            app:color="@color/chip_selector">

            <com.google.android.material.chip.Chip
                android:id="@+id/categoryStrokeEuropean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:text="@string/chip_category_european" />

            <com.google.android.material.chip.Chip
                android:id="@+id/categoryStrokeAsian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:text="@string/chip_category_asian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/categoryStrokeEastern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:text="@string/chip_category_eastern" />

            <com.google.android.material.chip.Chip
                android:id="@+id/categoryStrokeAmerican"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:text="@string/chip_category_american" />

            <com.google.android.material.chip.Chip
                android:id="@+id/categoryStrokeRussian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:text="@string/chip_category_russian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/categoryStrokeMediterranean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:text="@string/chip_category_mediterranean" />

            <com.google.android.material.chip.Chip
                android:id="@+id/categoryStrokePanasian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:text="@string/chip_category_panasian" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/recipePhotoStroke"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            app:autoSizeTextType="uniform"
            android:text="@string/recipe_photo" />

        <EditText
            android:id="@+id/editTextRecipePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:inputType="textPersonName"
            android:textSize="14sp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/recipeStroke"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:ellipsize="end"
            app:autoSizeTextType="uniform"
            android:text="@string/recipe_text" />

        <EditText
            android:id="@+id/editTextRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:inputType="textMultiLine"
            android:textSize="14sp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:layout_constraintBottom_toBottomOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_anchor="@id/bottomAppBar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_ok_24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</ScrollView>